--- a/sensor.html
+++ b/sensor.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/css/bootstrap.min.css.map">
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js.map"></script>
     <title>Kiosk Med Tech</title>
 
 </head>
@@ -14,10 +17,10 @@
       <div class="header">
         <div class="container-fluid d-flex justify-content-between">
             <div class="logo">
-                <img src="img/logo.png" alt="" style="height: 33px;width: 250px;">
+              <a href="index.html"><img src="img/logo.png" alt="" style="height: 33px;width: auto;"></a>
             </div>
             <div class="icons">
-                <div class="top-ixon"><a href="Vitals.html"><img src="img/home.png" style="height: 50px; width: 50px;"></a></div>
+                <div class="top-ixon"><a href="vitals.html"><img src="img/home.png" style="height: 50px; width: 50px;"></a></div>
                 <div class="top-ixon"><a href="index.html"><img src="img/signout.png" class="signoutpic" style="height: 50px; width: 50px;"></a></div>
             </div>
         </div>
