--- a/multifunction.html
+++ b/multifunction.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/css/bootstrap.min.css.map">
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js.map"></script>
   <title>Kiosk Med Tech</title>
   <style>
     .header {
@@ -69,10 +71,10 @@
     <div class="header">
       <div class="container-fluid d-flex justify-content-between">
         <div class="logo">
-          <img src="img/logo.png" alt="" style="height: 33px;width: auto;">
+          <a href="index.html"><img src="img/logo.png" alt="" style="height: 33px;width: auto;"></a>
         </div>
         <div class="icons">
-          <div class="top-ixon"><a href="Vitals.html"><img src="img/home.png" style="height: 50px; width: 50px;"></a>
+          <div class="top-ixon"><a href="vitals.html"><img src="img/home.png" style="height: 50px; width: 50px;"></a>
           </div>
           <div class="top-ixon"><a href="index.html"><img src="img/signout.png" class="signoutpic"
                 style="height: 50px; width: 50px;"></a></div>
@@ -199,7 +201,7 @@
             </div>
 
             <div class="btnsection">
-              <buton class="btnSbmt" id="myskip" onclick="window.location.href ='Reports.html'">Skip</buton>
+              <buton class="btnSbmt" id="myskip" onclick="window.location.href ='pathology.html'">Skip</buton>
               <buton class="btnSbmt" id="mysub" onclick="" style="display: none;">Submit</buton>
               <!-- <buton class="btnSbmt" id ="mysub" onclick="storeBmi()" style="display: none;">Submit</buton> -->
               <buton class="reload" id="reget" onclick="window.location.href ='Glucose 201.html'" style="display:none;">
