last files update given by adnan

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/css/bootstrap.min.css.map">
+  <link rel="stylesheet" href="css/bootstrap.min.css.map">
   <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js.map"></script>
+  <script src="js/bootstrap.bundle.min.js.map"></script>
   <title>Kiosk Med Tech</title>
   <style>
     .or {
@@ -65,14 +65,13 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
           <h2 class="welcometxt mt-4"> Welcome to KIOSK MED TECH</h2>
         </div>
-        <div class="col-lg-4">
-        </div>
-        <div class="col-lg-4">
+       <div class="row justify-content-center">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
           <div class="wrapper">
             <div class="row bg ">
               <div class="mb mb-2">
@@ -110,9 +109,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
-        </div>
-
+      </div>
       </div>
 
     </div>
