--- a/vitalsmeasurement.html
+++ b/vitalsmeasurement.html
@@ -7,13 +7,9 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/css/bootstrap-grid.min.css.map">
+    <link rel="stylesheet" href="css/bootstrap.min.css.map">
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js.map"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script> -->
-    <!-- <script src="js/gsap.min.js"></script>
-    <script src="js/scrollTrigger.min.js"></script> -->
+    <script src="js/bootstrap.bundle.min.js.map"></script>
     <title>Kiosk Med Tech</title>
     <style>
       .header {
@@ -648,12 +644,12 @@
         <section class="footer " style="margin-top: auto;">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-6 ">
+                <div class="col-xl-6 col-lg-6 col-md-4 col-sm-4">
                   <div class="logo float-start">
                     <img class="img-fluid" src="img/footerlogo.png" alt="">
                 </div>
                 </div>
-                <div class="col-6">
+                <div class="col-xl-6 col-lg-6 col-md-4 col-sm-4">
                   <div class="icons float-end mt-2">
                     <div class="lang"><a class="btn-custom greenbtn" href="Reports.html" style="text-decoration: none;" id="summary"><img src="img/reports.png">Summary</a></div>
                     <div class="cal"><a class="btn-custom greenbtn" style="text-decoration: none;" id="toggleLangLink" onclick="setLang()">हिंदी चुनें</a></div>
