--- a/pathology.html
+++ b/pathology.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/css/bootstrap.min.css.map">
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js.map"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css.map">
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js.map"></script>
     <title>Kiosk Med Tech</title>
     <style>
         .header {
@@ -95,7 +95,7 @@
                             </a>
                         </div>
                         <div class="measure-one-bio">
-                            <a class="patho-a" href="Lipid.html">
+                            <a class="patho-a" href="lipid.html">
                                 <div class="measureicon-icon">
                                     <img src="img/icons8-financial-growth-analysis-80.png">
                                     <p id="lpm">Lipid Analysis Meter</p>
