--- a/sensor.html
+++ b/sensor.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/css/bootstrap.min.css.map">
+    <link rel="stylesheet" href="css/bootstrap.min.css.map">
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js.map"></script>
+    <script src="js/bootstrap.bundle.min.js.map"></script>
     <title>Kiosk Med Tech</title>
 
 </head>
