--- a/vitals.html
+++ b/vitals.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/css/bootstrap.min.css.map">
+  <link rel="stylesheet" href="css/bootstrap.min.css.map">
   <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="bootstrap-5.0.2-dist (2)/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js.map"></script>
+  <script src="js/bootstrap.bundle.min.js.map"></script>
   <title>Kiosk Med Tech</title>
     <style>
         .header {
@@ -78,7 +78,7 @@
         <div class="container" >
             <div class="row">
                 <div class="col-3"></div>
-                <div class="col-6">
+                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                     <!-- <h2 style="color: #fff;text-align: center;font-weight: 600;font-size: 50px;">Hello!</h2> -->
                     <div class="measurevital">
                         <h3 id="meas-hd">Measure Vitals</h3>
@@ -94,8 +94,8 @@
                     <h3 id="selectvital">Select any vital below to start measuring</h3>
                 </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="col-3"></div>
+                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                         <div class="measureicon">
                             <a href="height.html">
                               <div class="measureicon-inn">
@@ -115,9 +115,9 @@
                             </a>
                         </div>
                     </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                    <div class="col-3"></div>
+                  <div class="col-3"></div>
+                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                         <div class="measureicon-bpmain">     
                             <div class="measureicon-lft flex-grow-1">
                               <a href="bp.html">
@@ -142,9 +142,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                    <div class="col-3"></div>
+                  <div class="col-3"></div>
+                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                         <div class="measureicon-inn pathology">
                             <div class="measureicon-icon">
                               <a class="patho-a" href="pathology.html" style="text-decoration: none;">
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div class="col-3"></div>
             </div>
             
                        
